hphp/test/slow/parser/unicode-literal-error.php.expectf
Fatal error: Malformed string literal <<Invalid\u{nope}Chars>> in %s/test/slow/parser/unicode-literal-error.php on line 6